fix: floating text proper fix with overflow instead of padding

--- a/styles.css
+++ b/styles.css
@@ -49,9 +49,10 @@ h5 {
     color: #333333;    
     font-size: 16px;
     margin: 0px auto;
-    padding: 20px 10px 50px;
+    padding: 20px 10px 0px;
     width: 300px;
     text-align: center;
+    overflow: auto;
 }
 
 .loginimg {
